--- a/css/dinner.css
+++ b/css/dinner.css
@@ -1,3 +1,9 @@
+*{
+    background:url(../images/dinner/background.jpeg) ;
+    margin: 0;
+    padding: 0;
+}
+
 #casserole-showing{
     display: none;
   }
